--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,49 @@
-fastapi~=0.86.0
-pydantic~=1.10.2
-uvicorn~=0.15.0
-numpy~=1.22.4
-pandas~=1.3.5
-scikit-learn~=1.3.0
-xgboost~=3.0.0
+anyio==4.9.0
+appnope==0.1.4
+asgiref==3.8.1
+asttokens==3.0.0
+click==8.1.8
+comm==0.2.2
+debugpy==1.8.14
+decorator==5.2.1
+executing==2.2.0
+fastapi==0.86.0
+h11==0.16.0
+idna==3.10
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+jedi==0.19.2
+joblib==1.5.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+matplotlib-inline==0.1.7
+nest-asyncio==1.6.0
+numpy==1.24.4
+packaging==25.0
+pandas==1.3.5
+parso==0.8.4
+pexpect==4.9.0
+platformdirs==4.3.8
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==1.10.22
+Pygments==2.19.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+pyzmq==26.4.0
+scikit-learn==1.3.2
+scipy==1.13.1
+six==1.17.0
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.20.4
+threadpoolctl==3.6.0
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.13.2
+uvicorn==0.15.0
+wcwidth==0.2.13
+xgboost==3.0.0
