--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 .vscode/
 .python-version
 .venv
+
+# Python cache
+__pycache__/
+*.py[cod]
+
+# pytest coverage and reports
+.coverage
+reports/
+
