--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-anyio==4.9.0
 appnope==0.1.4
 asgiref==3.8.1
 asttokens==3.0.0
@@ -48,4 +47,4 @@ uvicorn==0.15.0
 wcwidth==0.2.13
 xgboost==3.0.0
 imbalanced-learn~=0.11.0
-
+anyio>=4.0,<5.0
