--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,2 +1,98 @@
-matplotlib~=3.7.2
-seaborn~=0.12.2
+anyio==4.9.0
+appnope==0.1.4
+asgiref==3.8.1
+asttokens==3.0.0
+attrs==25.3.0
+Brotli==1.1.0
+certifi==2025.4.26
+cfgv==3.4.0
+charset-normalizer==3.4.2
+click==8.1.8
+comm==0.2.2
+ConfigArgParse==1.7
+contourpy==1.3.2
+coverage==5.5
+cycler==0.12.1
+debugpy==1.8.14
+decorator==5.2.1
+distlib==0.3.9
+executing==2.2.0
+fastapi==0.115.12
+filelock==3.18.0
+Flask==1.1.2
+Flask-BasicAuth==0.2.0
+flask-cors==5.0.1
+fonttools==4.57.0
+gevent==25.4.2
+geventhttpclient==2.3.3
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+identify==2.6.10
+idna==3.10
+imbalanced-learn==0.11.0
+iniconfig==2.1.0
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+itsdangerous==2.2.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.0
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+kiwisolver==1.4.8
+locust==1.6.0
+MarkupSafe==3.0.2
+matplotlib==3.7.5
+matplotlib-inline==0.1.7
+mockito==1.2.2
+msgpack==1.1.0
+nest-asyncio==1.6.0
+nodeenv==1.9.1
+numpy==1.24.4
+packaging==25.0
+pandas==1.3.5
+parso==0.8.4
+pexpect==4.9.0
+pillow==11.2.1
+platformdirs==4.3.8
+pluggy==1.5.0
+pre_commit==4.2.0
+prompt_toolkit==3.0.51
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py==1.11.0
+pydantic==1.10.22
+Pygments==2.19.1
+pyparsing==3.2.3
+pytest==6.2.5
+pytest-cov==2.12.1
+python-dateutil==2.9.0.post0
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==26.4.0
+requests==2.32.3
+scikit-learn==1.3.2
+scipy==1.13.1
+seaborn==0.12.2
+six==1.17.0
+sklearn-compat==0.1.3
+sniffio==1.3.1
+stack-data==0.6.3
+starlette==0.46.2
+threadpoolctl==3.6.0
+toml==0.10.2
+tornado==6.4.2
+traitlets==5.14.3
+typing_extensions==4.13.2
+urllib3==2.4.0
+uvicorn==0.15.0
+virtualenv==20.31.2
+wcwidth==0.2.13
+Werkzeug==3.1.3
+xgboost==3.0.0
+zope.event==5.0
+zope.interface==7.2
