--- a/requirements-test.txt
+++ b/requirements-test.txt
@@ -1,5 +1,9 @@
-locust~=1.6
 coverage~=5.5
 pytest~=6.2.5
 pytest-cov~=2.12.1
 mockito~=1.2.2
+locust==1.6.0
+Flask==1.1.2
+itsdangerous==1.1.0
+jinja2==3.0.3
+werkzeug==1.0.1
