--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,9 @@ iniconfig==2.1.0
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
-itsdangerous==2.2.0
+itsdangerous==1.1.0
 jedi==0.19.2
-jinja2==3.1.3
+jinja2==3.0.3
 joblib==1.5.0
 jupyter_client==8.6.3
 jupyter_core==5.7.2
@@ -91,7 +91,7 @@ typing_extensions==4.13.2
 urllib3==2.4.0
 virtualenv==20.31.2
 wcwidth==0.2.13
-Werkzeug==3.1.3
+werkzeug==1.0.1
 xgboost==3.0.0
 zope.event==5.0
 zope.interface==7.2
