--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -1,7 +1,32 @@
-name: 'Continuous Delivery'
+name: Continuous Delivery
 
 on:
-  ...
+  push:
+    branches:
+      - main
 
 jobs:
-  ...
+  deploy:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up GCP credentials
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      - name: Set up gcloud CLI
+        uses: google-github-actions/setup-gcloud@v1
+        with:
+          project_id: ml-latam-challenge-api
+
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy ml-api \
+            --image=us-central1-docker.pkg.dev/ml-latam-challenge-api/ml-api-repo/ml-api:latest \
+            --platform=managed \
+            --region=us-central1 \
+            --allow-unauthenticated
